@@ -1,2 +1,6 @@
 # Desktop Client
 Desktop app of Chattitude
+
+Intellij Run Configuration:
+- VM options: --module-path PATH_TO_JAVAFX_LIB_DIR --add-modules=javafx.controls,javafx.fxml
+         e.g. --module-path "C:\Program Files\JavaFX\lib" --add-modules=javafx.controls,javafx.fxml
